--- a/css/style.css
+++ b/css/style.css
@@ -66,6 +66,7 @@ ul {
 
 h1 {font-size: 7rem;}
 h3 {font-size: 4rem;}
+h4 {font-size: 3rem;}
 h5 {font-size: 1rem;}
 
 
@@ -93,13 +94,12 @@ h5 {font-size: 1rem;}
     line-height: 80px;
     color: #fff;
     font-size: 2rem;
-    border: 5px solid #fff;
+    border: 6px solid #fff;
     border-radius: 50%;
 }
 
-.headvend h3 {
-    width: 500px;
-    margin: 0 100px;
+.headvend h4 {
+    font-size: 2.5rem;
 }
 
 .inner .headercontent {
@@ -115,10 +115,12 @@ h5 {font-size: 1rem;}
 
 #main1 img:nth-child(1) {
     position: relative;
+    width: 100%;
     /* animation: motion 1.3s linear 0s; */
 }
 
 #main1 img:nth-child(2) {
+    width: 100%;
     position: absolute;
     top: 190px; left: 0;
     animation: effect1 5s 3s infinite;
@@ -127,6 +129,7 @@ h5 {font-size: 1rem;}
 
 #main1 img:nth-child(3) {
     position: absolute;
+    width: 100%;
     top: 100px; left: 0;
     animation: effect1 5s 2s infinite;
     /* display: none; */
@@ -144,7 +147,13 @@ h5 {font-size: 1rem;}
     display: none;
 }
 
+#main2 img:nth-child(1) {
+    width: 100%;
+    margin: 0 auto;
+}
+
 #main2 img:nth-child(2) {
+    width: 100%;
     position: absolute;
     top: 80px; left: 0;
     animation: effect1 3s 0.5s infinite;
@@ -164,6 +173,10 @@ h5 {font-size: 1rem;}
     animation: motion 1s 1s infinite;
 }
 
+#main3 img:nth-child(1) {
+    width: 100%;
+    margin: 0 auto;
+}
 
 #main3 img:nth-child(2) {
     position: absolute;
